--- a/views/properties/view-properties.pug
+++ b/views/properties/view-properties.pug
@@ -42,13 +42,21 @@ block contenido
 
                     if !isVendedor
                         h3(class="text-2xl text-center my-10 font-extrabold text-gray-900") Vendedor
-                        if usuario
+
+                        if redirect
+                            p(class="p-2 text-center bg-green-100 text-green-600 uppercase font-bold") Mensaje Enviado Correctamente
+
+                        else if usuario
+                            if errors
+                                div(class="max-w-md mx-auto my-10")
+                                    each error in errors
+                                        p.bg-red-600.text-white.uppercase.text-xs.text-center.p-2.mb-1.font-bold.rounded= error.msg
                             form(method="POST") 
                                 input(type="hidden" name="_csrf" value= csrfToken)
 
                                 div(class="space-y-5")
-                                    label(for="mensaje") Mensaje
-                                    textarea(id="mensaje" name="mensaje" class="w-full py-2 border border-e-gray-300 rounded-lg  shadow placeholder-gray-400" placeholder="Contactanos")
+                                    label(for="message") Mensaje
+                                    textarea(id="message" name="message" class="w-full px-2 py-2 border border-e-gray-300 rounded-lg  shadow placeholder-gray-400" placeholder="Contactanos")
 
                                     input(type="submit" value="Enviar Mensaje" class="bg-indigo-600 text-white font-bold uppercase text-sm w-full p-2 cursor-pointer")
                         else
